<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="com.framgia.framgiastaff.screen.register.RegisterViewModel"
            />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_30"
            android:background="@drawable/background"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize"
            >
            <ImageView
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_100"
                android:layout_gravity="center"
                android:src="@drawable/ic_f"
                tools:ignore="ContentDescription"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/register_staff"
                android:textColor="@color/color_gray"
                android:textSize="25sp"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:orientation="vertical"
                android:paddingEnd="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:paddingStart="@dimen/dp_10"
                >
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/dp_10"
                        android:hint="@string/id_staff"
                        android:maxLines="1"
                        android:text="@={viewModel.id}"
                        android:textColor="@android:color/black"
                        app:errorText="@{viewModel.idError}"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/dp_10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:text="@={viewModel.email}"
                        android:textColor="@android:color/black"
                        app:errorText="@{viewModel.emailError}"
                        />
                </android.support.design.widget.TextInputLayout>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:id="@+id/button_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:paddingEnd="@dimen/dp_10"
                        android:paddingLeft="@dimen/dp_5"
                        android:paddingRight="@dimen/dp_10"
                        android:paddingStart="@dimen/dp_5"
                        android:text="@string/female"
                        />
                    <RadioButton
                        android:id="@+id/button_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:paddingEnd="@dimen/dp_5"
                        android:paddingLeft="@dimen/dp_10"
                        android:paddingRight="@dimen/dp_5"
                        android:paddingStart="@dimen/dp_10"
                        android:text="@string/male"
                        />
                </RadioGroup>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/button_date"
                        android:layout_toStartOf="@+id/button_date"
                        bind:errorTextInputLayout="@{viewModel.dateError}"

                        >
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginEnd="@dimen/dp_10"
                            android:layout_marginRight="@dimen/dp_10"
                            android:enabled="false"
                            android:gravity="bottom"
                            android:hint="@string/official_working_day"
                            android:maxLines="1"
                            android:text="@={viewModel.date}"
                            android:textColor="@android:color/black"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <ImageButton
                        android:id="@+id/button_date"
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_date"
                        android:onClick="@{() -> viewModel.onClickSelectDate()}"
                        tools:ignore="ContentDescription"
                        />
                </RelativeLayout>
                <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center_horizontal"
                    android:selectedItemPosition="@={viewModel.selectedTypePosition}"
                    android:spinnerMode="dropdown"
                    bind:spinnerAdapter="@{viewModel.adapter}"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_margin="@dimen/dp_5"
                    android:background="@color/color_gray_light"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/location"
                        android:textColor="@color/color_gray"
                        android:textSize="@dimen/sp_20"
                        />
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/dp_10"
                        android:checkedButton="@+id/check_div1"
                        android:gravity="center"
                        android:orientation="horizontal"
                        >
                        <RadioButton
                            android:id="@+id/check_div1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/div_1"
                            style="@style/Base.Widget.AppCompat.CompoundButton.CheckBox"
                            />
                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/div_2"
                            style="@style/Base.Widget.AppCompat.CompoundButton.CheckBox"
                            />
                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/div_3"
                            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                            />
                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/border_text"
                android:gravity="center"
                android:onClick="@{() -> viewModel.onClickRegister()}"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_20"
                />

        </LinearLayout>
    </ScrollView>
</layout>
